--- a/FlightAnalyzer/FlightAnalyzer.csproj
+++ b/FlightAnalyzer/FlightAnalyzer.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="21.0.2" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="21.0.2" />
   </ItemGroup>
 
 </Project>
